--- a/projects.html
+++ b/projects.html
@@ -58,7 +58,7 @@
                             <div class="col-md-6 mb-5">
                                 <a class="card card-portfolio h-100" href="my-housing.html">
                                     <img class="card-img-top"
-                                        src="../portfolio-sitefolder/assets/img/extra/my-housing-main.png" alt="..." />
+                                        src="/assets/img/extra/my-housing-main.png" alt="..." />
                                     <div class="card-body">
                                         <div class="card-title">My Housing Upgraded</div>
                                     </div>
@@ -67,7 +67,7 @@
                             <div class="col-md-6 mb-5">
                                 <a class="card card-portfolio h-100" href="mercer-food-finder.html">
                                     <img class="card-img-top"
-                                        src="../portfolio-sitefolder/assets/img/extra/mercer-county-food-finder-main.png"
+                                        src="/assets/img/extra/mercer-county-food-finder-main.png"
                                         alt="..." />
                                     <div class="card-body">
                                         <div class="card-title">Mercer County Free Food Finder</div>
@@ -77,7 +77,7 @@
                             <div class="col-md-6 mb-5">
                                 <a class="card card-portfolio h-100" href="mainframe.html">
                                     <img class="card-img-top"
-                                        src="../portfolio-sitefolder/assets/img/extra/mainframe-main.png" alt="..." />
+                                        src="/assets/img/extra/mainframe-main.png" alt="..." />
                                     <div class="card-body">
                                         <div class="card-title">Mainframe <br>(Student Information Management System)</div>
                                     </div>
