Launch Admin Demo in new tab

--- a/mercer-food-finder.html
+++ b/mercer-food-finder.html
@@ -45,7 +45,7 @@
                                     <h1 class="page-header-ui-title">Mercer County Free Food Finder</h1>
                                     <p class="page-header-ui-text">Quickly and seamlessly connect local food resources
                                         to those that need it most</p>
-                                    <a class="btn btn-success fw-500 me-2" href="https://mffdemo.swstx.org">Launch Admin
+                                    <a class="btn btn-success fw-500 me-2" href="https://mffdemo.swstx.org" target="_blank" rel="noopener noreferrer">Launch Admin
                                         Demo</a>
                                     <a class="btn btn-link fw-500" href="https://mercerfoodfinder.herokuapp.com"
                                         target="_blank" rel="noopener noreferrer">Visit Live App</a>
@@ -316,7 +316,7 @@
                                 <h2 class="text-white">Take a peek behind the curtain.</h2>
                                 <p class="lead text-white-50 mb-5">Want to test out some of the admin features? Try the
                                     demo version of the app to preview its capabilities!</p>
-                                <a class="btn btn-teal fw-500" href="https://mffdemo.swstx.org">Launch Admin Demo</a>
+                                <a class="btn btn-teal fw-500" href="https://mffdemo.swstx.org" target="_blank" rel="noopener noreferrer">Launch Admin Demo</a>
                             </div>
                         </div>
                     </div>
