--- a/my-housing.html
+++ b/my-housing.html
@@ -43,7 +43,7 @@
                             <div class="row gx-5 justify-content-center">
                                 <div class="col-xl-8 col-lg-10 text-center mb-4" data-aos="fade">
                                     <h1 class="page-header-ui-title">My Housing Upgraded</h1>
-                                    <p class="page-header-ui-text">Putting the management, allocation, and selection of
+                                    <p class="page-header-ui-text">Putting the , allocation, and selection of
                                         housing resources at your fingertips</p>
                                     <a class="btn btn-success fw-500 me-2" target="_blank" rel="noopener noreferrer"
                                         href="https://myhousing-demo.swstx.org">Launch Demo</a>
@@ -99,7 +99,7 @@
                                 </div>
                                 <h3>Feature rich</h3>
                                 <p class="mb-0">Powerful tools for both admins and end-users are provided, allowing for
-                                    the system to management itself.</p>
+                                    the system to help manage itself.</p>
                             </div>
                         </div>
                     </div>
